src/patch/snapshots/diffy__patch__parse__tests__real_world_patches@nested.patch.snap
---
source: src/patch/parse.rs
expression: patches
input_file: src/patch/test-data/nested.patch
---
[
    Patch {
        original: Some(
            Filename(
                "a/src/lib/hello.txt",
            ),
        ),
        modified: Some(
            Filename(
                "b/src/lib/hello.txt",
            ),
        ),
        hunks: [
            Hunk {
                old_range: HunkRange {
                    start: 0,
                    len: 0,
                },
                new_range: HunkRange {
                    start: 1,
                    len: 1,
                },
                function_context: None,
                lines: [
                    Insert(
                        "hello world\n",
                    ),
                ],
            },
        ],
    },
]
