src/patch/snapshots/diffy__patch__parse__tests__real_world_patches@simple.patch.snap
---
source: src/patch/parse.rs
expression: patches
input_file: src/patch/test-data/simple.patch
---
[
    Patch {
        original: Some(
            Filename(
                "a/hello.txt",
            ),
        ),
        modified: Some(
            Filename(
                "b/hello.txt",
            ),
        ),
        hunks: [
            Hunk {
                old_range: HunkRange {
                    start: 0,
                    len: 0,
                },
                new_range: HunkRange {
                    start: 1,
                    len: 1,
                },
                function_context: None,
                lines: [
                    Insert(
                        "hello world\n",
                    ),
                ],
            },
        ],
    },
]
